# binder

./: .gitattributes  .gitignore  .gitmodules  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO  app.go  build.ps1  exec_other.go  exec_windows.go  getdefaultdir_other.go  getdefaultdir_windows.go  go.mod  main.go  note.txt  terminal.go  utils.go  wails.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: audit.yml  build-matrix.yml  code-quality.yml  coverage.yml  lint.yml  pr-checks.yml  release.yml  security-review.yml  stale.yml
app/: .wailsignore  app.go  config.go  envpath_other.go  envpath_windows.go  git.go  go.mod  go.sum  jumplist_other.go  jumplist_windows.go  main.go  pack.go  perf.go  perf_other.go  perf_windows.go  plugins.go  ports.go  ports_other.go  ports_windows.go  preview_server.go  problems.go  splash_other.go  splash_windows.go  terminal.go  terminal_interrupt_other.go  terminal_interrupt_windows.go  terminal_uptime_other.go  terminal_uptime_windows.go  update.go  update_other.go  update_windows.go  utils.go  wails.json
app/bash/: LICENSE  README.md  go.mod
app/bash/src/: shell.go
app/config/: config.go
app/cppbridge/: bridge.go  bridge_other.go  bridge_test.go
app/frontend/: eslint.config.js  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
app/frontend/scripts/: check-ui-text.mjs
app/frontend/src/: App.css  App.scss  App.tsx  main.tsx  paneModel.ts  themes.ts
app/frontend/src/apps/: AppStore.scss  AppStore.tsx  loader.ts  registry.ts  remoteRegistry.ts  sidebarOrder.ts  sidebarRegistry.ts  types.ts
app/frontend/src/components/: AppErrorBoundary.tsx  CompletionsPopup.tsx  ConfigEditor.css  ConfigEditor.scss  ConfigEditor.tsx  ContextMenu.css  ContextMenu.scss  ContextMenu.tsx  Database.scss  Database.tsx  DatabasePage.scss  DatabasePage.tsx  Editor.tsx  EndpointsTab.scss  EndpointsTab.tsx  EventsMap.tsx  FindReplaceBar.tsx  GitBranchIcon.tsx  GpuEditor.css  GpuEditor.tsx  LivePreviewPage.tsx  NewPortForwardModal.tsx  NewWorkflowModal.tsx  NotepadPage.tsx  PaneTabBar.tsx  PerfTab.css  PerfTab.scss  PerfTab.tsx  PortsTab.css  PortsTab.scss  PortsTab.tsx  Preview.css  Preview.scss  Preview.tsx  Problems.scss  Problems.tsx  SearchBar.css  SearchBar.scss  SearchBar.tsx  SearchPalette.css  (+25 more)
app/fullscreen/: fullscreen.go
app/plugins/: plugins.go
app/ports/: ports_linux.go  ports_windows.go
app/powershell/: README.md  go.mod
app/powershell/src/: shell.go  shell_other.go
app/problems/: problems.go
app/search/: search.go
app/session/: session.go
app/terminal/: README.md  go.mod
app/terminal/src/: defaultdir_other.go  defaultdir_windows.go  exec_other.go  exec_windows.go
app/windows/: windows.go
app/zsh/: README.md  go.mod
app/zsh/src/: shell.go
cpp/: CMakeLists.txt  vcpkg.json
cpp/apps/database/: dllmain.cpp
cpp/apps/livepreview/: dllmain.cpp
cpp/apps/ports/: dllmain.cpp
cpp/apps/versioncontrol/: dllmain.cpp
cpp/apps/workflows/: dllmain.cpp
cpp/host/: CMakeLists.txt  app_plugin_loader.cpp  app_plugin_loader.hpp  assets.hpp  dispatch.cpp  dispatch.hpp  gen_assets.py  jumplist_windows.cpp  jumplist_windows.hpp  main.cpp  resource.h  resources.rc  singleinstance.hpp  splash_windows.cpp  splash_windows.hpp  window_win.cpp  window_win.hpp
cpp/installer/: CMakeLists.txt  installer.cpp  installer.hpp  main.cpp  resources.rc
cpp/ports/zserge-webview/: portfile.cmake
cpp/setup/: CMakeLists.txt  channel.hpp  installer.cpp  installer.hpp  main.cpp  resources.rc
cpp/src/: app_plugin_abi.h  base64.hpp  config.cpp  config.hpp  database.cpp  database.hpp  editor_buffer.cpp  editor_buffer.hpp  file_watcher.cpp  file_watcher.hpp  fileops.cpp  fileops.hpp  git.cpp  git.hpp  ipc.cpp  ipc.hpp  main.cpp  pack.cpp  pack.hpp  port_forward.cpp  port_forward.hpp  preview.cpp  preview.hpp  process_registry.cpp  process_registry.hpp  search.cpp  search.hpp  session.cpp  session.hpp  sysinfo.cpp  sysinfo.hpp  terminal.cpp  terminal.hpp  updater.cpp  updater.hpp  workflow_expr.cpp  workflow_expr.hpp  workflow_runner.cpp  workflow_runner.hpp  workflow_yaml.cpp  (+3 more)
docs/: ide-migration-plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/content/configuration/: settings.md  themes.md
docs/content/features/: database.md  preview.md  problems.md
docs/content/help/: troubleshooting.md
docs/content/install/: build-from-source.md  getting-started.md
docs/content/overview/: about-cmdide.md
docs/content/workspace/: editor.md  terminal-tabs.md
docs/migration/: README.md  option3-readiness.md  phase-0-foundation.md  phase-1-terminal.md  phase-2-files-config.md  phase-3-system-services.md  phase-4-data-utilities.md  phase-5-retirement-prep.md  phase-f-tailwind.md  phase-g-launcher.md  phase-h-webview-host.md  phase-i-frontend-ipc.md  phase-j-native-window.md  phase-k-crossplatform.md  phase-l-installer.md  phase-m-build.md  phase-n-retirement.md  step2-README.md
docs/src/: App.tsx  content.ts  markdown.ts  site.ts  styles.css  types.ts
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  themes.ts
frontend/src/components/: Editor.tsx  TabBar.css  TabBar.tsx  Terminal.tsx
frontend/src/types/: index.ts
frontend/wailsjs/go/: models.ts
installer/: go.mod  wails.json
installer/embedded/: app.go  go.mod
installer/frontend/: package-lock.json  package.json
installer/frontend/src/: App.scss  main.tsx
installer/linux/: app.go  go.mod  main.go
installer/macos/: app.go  go.mod
installer/windows/: app.go  channel.go  channel_dev.go  go.mod  main.go
installer/windows/frontend/: package-lock.json  package.json
setup/frontend/: index.html  package-lock.json  package.json  package.json.md5
setup/windows/frontend/: index.html  package-lock.json  package.json  package.json.md5
(+68 files in other folders)
